--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   my_new_project:
-    # Applies to all files under models/example/
-    example:
-      +materialized: table
+    example:  # this should match your models folder structure
+      # +schema: temp_table
+      +database: ezlicence-1506735963116
